--- a/test_filter_junit5_example/pom.xml
+++ b/test_filter_junit5_example/pom.xml
@@ -11,5 +11,22 @@
 
     <artifactId>test_filter_junit5_example</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.5.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
